# ROS_Gazebo_bridge

gate3_position_publisher/: CMakeLists.txt  package.xml
gate3_position_publisher/src/: gates_position_publisher.cpp
my_bridge_msgs/: CMakeLists.txt  package.xml
my_bridge_msgs/msg/: GatesPositions.msg
