<package format="3">
  <name>my_bridge_msgs</name>
  <version>0.0.1</version>
  <description>Custom msgs for gate positions</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>builtin_interfaces</depend>
  <depend>rosidl_default_generators</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

</package>
